@@ -1,4 +1,4 @@
-<div id="<%= sub_form_list_id(:association => column.name) %>">
+<div id="<%= sub_form_list_id(:association => column.name, :id => parent_record.id || generated_id(parent_record) || 99999999999) %>">
   <% associated.each_index do |index| %>
   <% @record = associated[index] -%>
   <%= render :partial => 'form_association_record', :locals => {:scope => column_scope(column, scope), :parent_record => parent_record, :column => column, :locked => show_blank_record && @record.new_record? && @record == associated.last, :index => index} %>
